# car-command-edge-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  RESULTS.md  pyproject.toml  requirements.txt
data/processed/: metadata.json  test.jsonl
data/results/: comparison_table.csv
data/results/loss_curves/: llama-v2.json  llama.json  qwen.json  smollm2.json
data/results/predictions/: llama-4bit.jsonl  llama-8bit.jsonl  llama-finetuned.jsonl  llama-v2-4bit.jsonl  llama-v2-8bit.jsonl  llama-v2-finetuned.jsonl  qwen-4bit.jsonl  qwen-8bit.jsonl  qwen-finetuned.jsonl  smollm2-4bit.jsonl  smollm2-8bit.jsonl  smollm2-finetuned.jsonl
docs/: MODEL_CARD.md  RESULTS.md  SETUP.md
docs/superpowers/specs/: 2026-04-01-car-command-edge-ai-design.md
scripts/: run_benchmark.sh  run_red_team.sh
src/: benchmark.py  dataset.py  demo_cli.py  finetune.py  finetune_mlx.py  generate_dataset.py  plot_losses.py  quantize.py  red_team.py  utils.py
tests/: test_dataset.py  test_finetune.py  test_generate_dataset.py  test_red_team.py
